Correct flip of paint invalidation rect in PaintInvalidator

We need convert from flipped physical coordinates for not only
LayoutBoxes (like PaintInvalidationState does), but also non-box
objects before applying paint offset and geometry mappings.

BUG=648409
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2368373004
Cr-Commit-Position: refs/heads/master@{#421422}

Former-commit-id: b9014646db766be89300d38806c340e4b2772e7a